argo/cd/base/apps/dev/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tensorleap-web
  name: tensorleap-web
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: tensorleap-web
  sessionAffinity: None
  type: NodePort
