argo/cd/base/apps/dev/web-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tensorleap-web
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: tensorleap-web
              servicePort: http
            path: /
